# nodebpy

./: ITEMS_API_PLAN.md  Makefile  PLAN.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docs-preview.yml  lint.yml  tests.yml
docs/: _quarto.yml  _variables.yml  assets.qmd  changelog.qmd  comparisons.qmd  introduction.qmd  node-api.qmd  nodes-to-code.qmd  operators.qmd  shiki.html  using.qmd
docs/_inv/: python_objects.json
src/nodebpy/: __init__.py  diagram.py  types.py  web_render.py
src/nodebpy/assets/: __init__.py  __main__.py  _codegen.py
src/nodebpy/builder/: __init__.py  _utils.py  accessor.py  arrange.py  asset.py  items.py  mixins.py  node.py  socket.py  tree.py
src/nodebpy/export/: __init__.py  codegen.py  diagram.py
src/nodebpy/lib/nodearrange/: utils.py
src/nodebpy/nodes/: _mixins.py
src/nodebpy/nodes/compositor/: __init__.py  assets.py  converter.py  interface.py  manual.py
src/nodebpy/nodes/geometry/: __init__.py  assets.py  attribute.py  converter.py  geometry.py  grid.py  groups.py  input.py  interface.py  manual.py  (+1 more)
tests/: conftest.py  test_arrange.py  test_arrange_no_networkx.py  test_assets.py  test_builder_coverage.py  test_codegen.py  test_custom_groups.py  test_diagram.py  test_dynamic_inputs.py  test_interface.py  test_node_builder.py  test_nodes.py  test_operators.py  test_shader.py  test_tree.py  test_usecases.py  test_web_render.py
tests/__snapshots__/: test_codegen.ambr  test_compositor.ambr  test_diagram.ambr  test_interface.ambr  test_nodes.ambr  test_tree.ambr  test_tree_snapshots.ambr  test_usecases.ambr
(+6 files in other folders)
