[project]
name = "nodebpy"
version = "520.1.0"
description = "Build nodes trees in Blender more elegantly with code"
readme = "README.md"
authors = [
    { name = "Brady Johnston", email = "brady.johnston@me.com" }
]
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }

[project.scripts]
nodebpy = "nodebpy:main"

[project.optional-dependencies]
networkx = [
    "networkx>=3.6.1",
]
bpy = [
    "bpy==5.2.*",
]
# Used by `to_python(format=True)` to tidy generated source via `ruff format`.
format = [
    "ruff>=0.14.11",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "networkx>=3.6.1",
    "fake-bpy-module>=20260501",
    "jsondiff>=2.2.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "quarto-cli>=1.9",
    "quartodoc>=0.11.1",
    "ruff>=0.14.11",
    "syrupy>=5.0.0",
    "pytest-xdist>=3.8.0",
    "griffe<2.0.0",
    "ty>=0.0.35",
]
